# londonhack

./: .env.example  .gitignore  AGENTS.md  README.md  agent_plan.md  overview_plan.md  pyproject.toml  render.yaml  vision_orchestrator_connection.md
app/: README.md  __init__.py  _runtime_overrides.py  config.py  evidence_pack.py  fallback.py  layout_candidates.py  logfire_setup.py  memory.py  mubit_agents.py  schemas.py  sessions.py
app/agents/: __init__.py  object_review_agent.py  optimization_agent.py  pattern_agent.py  sim_agent.py
app/api/: main.py  routes.py
app/vision/: __init__.py  kpi.py  objects.py  tracks.py
demo_data/: README.md  mubit_fallback.jsonl
demo_data/sessions/ai_cafe_a/: kpi_windows.json  object_detections.cached.json  object_detections.reviewed.cached.json  object_inventory.json  object_review.cached.json  pattern_fixture.json  recommendation.cached.json  session.json  tracks.cached.json  zones.json
demo_data/sessions/real_cafe/: session.json  (+9 more)
docs/: agent_plan.md  cafetwin-tier1-overview.html  overview_plan.md  vision_benchmarks.md
docs/architecture/: README.md  fixture_contract.md  mvp_spine.md  project_structure.md
frontend/: README.md  api.js  app-canvas.jsx  app-panels.jsx  app-state.jsx  cafe-iso.jsx  cafetwin.css  cafetwin.html  tweaks-panel.jsx
scripts/: README.md  benchmark_moondream_local.py  benchmark_static_detectors.py  deploy_render.sh  deploy_vercel.sh  detect_layout_objects.py  dev.sh  render_rich_annotated_video.py  review_layout_objects_agent.py  review_layout_objects_moondream.py  run_yolo_offline.py  setup.sh  smoke.sh  test.sh  transcode_annotated_for_web.sh
scripts/vision/: detect_layout_objects.py  render_rich_annotated_video.py  run_yolo_offline.py  transcode_annotated_for_web.sh
skills/: building-pydantic-ai-agents
tests/: conftest.py  test_api.py  test_evidence_pack.py  test_kpi_engine.py  test_layout_candidates.py  test_live_inventory.py  test_logfire_setup.py  test_mubit_agents.py  test_object_review_agent.py  test_optimization_agent.py  test_pattern_agent.py  test_rate_limit.py  test_sim_agent.py  test_vision_objects.py  test_vision_tracks.py
(+1 files in other folders)
